# test-gitops

argocd-project/: .gitignore  ARCHITECTURE.md  HELM_VS_MANIFESTS.md  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  kind-config.yaml
argocd-project/argocd/applications/: guestbook-git.yaml  guestbook.yaml
argocd-project/helm-charts/guestbook/: Chart.yaml  values.yaml
argocd-project/helm-charts/guestbook/templates/: _helpers.tpl  deployment.yaml  redis-deployment.yaml  redis-service.yaml  service.yaml
argocd-project/scripts/: cleanup.sh  create-cluster.sh  deploy-all.sh  deploy-guestbook.sh  install-argocd.sh  setup-gitea.sh  setup-local-repo.sh
argocd-test/: Dockerfile  README.md  backstage-labeler.sh  config.yaml  guestbook.yaml  helmfile.yaml  kind-config.yaml  pyproject.toml  run.sh  services-metadata.json
argocd-test/argocd/: argocd-values.yaml  plugin-configmap-copy.yaml  plugin-configmap.yaml  services-configmap.yaml
argocd-test/argocd/applications/: guestbook-git-set.yaml  guestbook-git.yaml
argocd-test/src/: __init__.py  backstage_labeler.py
argocd-test/test-manifests/: sample.deployment.yaml
argocd/base/: kustomization.yaml
argocd/base/patches/: argocd-server-deployment-kustomize-spec-patch.yaml
argocd/overlays/local/: kustomization.yaml
argocd/overlays/mgmt/: kustomization.yaml
cluster-apps/bootstrap/external-secrets-operator/: kustomization.yaml
cluster-apps/bootstrap/keda/: kustomization.yaml
cluster-apps/bootstrap/testapp-guestbook/: kustomization.yaml
test/: ArgoApplicationSet.yaml  ArgoProject.yaml
(+34 files in other folders)
